@@ -35,4 +35,4 @@ Feel free to send comments, bug reports and suggestions to
 Peter Pentchev <roam@ringlet.net>
 
 Copyright (c) 1995,1996 Sascha Demetrio
-Copyright (c) 2009 - 2011, 2014 Peter Pentchev
+Copyright (c) 2009 - 2011, 2014, 2015 Peter Pentchev
