@@ -1,6 +1,6 @@
 /* defs.h:
  * Copyright (c) 1995,1996 Sascha Demetrio
- * Copyright (c) 2009 Peter Pentchev
+ * Copyright (c) 2009, 2015 Peter Pentchev
  */
 
 /*
