@@ -9,6 +9,7 @@ Change log for hexer, the multi-view binary editor
 	- simplify exh_save_buffer(): it's only used on the whole file
 	- declare some functions as printf-like
 	- handle short reads/writes and read/write errors
+	- bump the year on my copyright notice
 
 0.1.8	2014/09/11
 	- fix a crash when inserting or replacing a half-byte
